--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,29 @@
-body {
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
+body {
+  background-image: url(assets/img/bg.jpg);
+ /* background-color: rgb(255, 255, 255); */
+  background-size: cover;
+  background-repeat: no-repeat;
+  margin: 0;
+  overflow-x: hidden;
+}
+
+@media only screen and (max-width: 600px) {
+  body {
+    background-size: 600px 1000px;
+  }
+}
+
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.Gaga{
+  height: auto;
+  width: 20rem;
 }
